--- a/TibiaBazar.Application/TibiaBazar.Application.csproj
+++ b/TibiaBazar.Application/TibiaBazar.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentResults" Version="3.15.2" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.60" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TibiaBazar.Domain\TibiaBazar.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
