register service in minial API

--- a/TibiaBazar.Application/TibiaBazar.Application.csproj
+++ b/TibiaBazar.Application/TibiaBazar.Application.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FluentResults" Version="3.15.2" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.60" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
