--- a/TibiaBazar.API/appsettings.json
+++ b/TibiaBazar.API/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TibiaBazarUrl": "https://www.tibia.com/charactertrade/?subtopic=currentcharactertrades"
 }
